# abing258-substrate_study_OneBlock

./: .gitignore  README.md
Advanced/lesson_homework_five/: README.md
Advanced/lesson_homework_five/erc20/: Cargo.toml  lib.rs
Advanced/lesson_homework_one/: .gitignore  README.md
Advanced/lesson_homework_one/node/: Cargo.toml
Advanced/lesson_homework_one/node/src/: service.rs
Advanced/lesson_homework_one/pallets/kitties/: Cargo.toml
Advanced/lesson_homework_one/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
Advanced/lesson_homework_one/pallets/poe/: Cargo.toml
Advanced/lesson_homework_one/pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  raw.json  tests.rs  weight.rs
Advanced/lesson_homework_one/pallets/template/: Cargo.toml
Advanced/lesson_homework_one/pallets/template/src/: lib.rs
Advanced/lesson_homework_one/runtime/: Cargo.toml
Advanced/lesson_homework_one/runtime/src/: lib.rs
Advanced/lesson_homework_six/: stencil-staging-raw.json  stencil-staging.json  stencil-testnet-config.md
Advanced/lesson_homework_three/: README.md
Advanced/lesson_homework_three/src/: Kitties.js  KittyCards.js
Introduction/lesson_homework_five/: .gitignore
Introduction/lesson_homework_five/pallets/poe/: Cargo.toml
Introduction/lesson_homework_five/pallets/poe/src/: lib.rs
Introduction/lesson_homework_four/: README.md
Introduction/lesson_homework_six/: README.md  package.json  tsconfig.json
Introduction/lesson_homework_six/src/: main.ts
Introduction/lesson_homework_three/: README.md
